--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: hubs_data
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
-# homepage: https://www.example.com
+homepage: https://github.com/samlet/hubs_data
 
 environment:
   sdk: '>=2.17.0 <3.0.0'
@@ -19,4 +19,4 @@ dev_dependencies:
   build_runner: ^2.1.7
   test: ^1.3.0
   mocktail: ^0.3.0
-  lints: ^1.0.1
+  lints: ^2.0.0
